--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
     redis:
         image: "redis:6-alpine3.15"
+        hostname: redis
         ports:
         - "6379:6379"
         volumes:
@@ -20,7 +21,7 @@ services:
         volumes:
             - ./postgresql/data:/var/lib/postgresql/data/
             # - db_volume:/var/lib/postgresql
-        restart: always
+        # restart: always
     app:
         build: ./python
         container_name: python_container
