--- a/python/app/requirements.txt
+++ b/python/app/requirements.txt
@@ -2,10 +2,13 @@ asgiref==3.4.1
 certifi==2021.10.8
 Deprecated==1.2.13
 Django==4.0
+django-filter==21.1
 django-redis==5.2.0
 djangorestframework==3.13.1
 packaging==21.3
+psycopg2-binary==2.9.3
 pyparsing==3.0.6
+python-decouple==3.4
 pytz==2021.3
 redis==4.1.0
 sentry-sdk==1.5.1
