--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,11 @@ services:
             - "8000:8000"
         volumes:
             - ./python/app:/app/
+        command: >
+            sh -c "
+                pip install -r requirements.txt
+                ./manage.py runserver 0.0.0.0:8000
+            "
         depends_on:
             - db
     nginx:
