django setup raughly done

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -15,4 +15,4 @@ RUN apt-get update \
 
 EXPOSE 8000
 
-# ENTRYPOINT ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+# ENTRYPOINT ["./manage.py", "runserver", "0.0.0.0:8000"]
