--- a/python/app/.env
+++ b/python/app/.env
@@ -4,11 +4,8 @@ SENTRY_TRACE_SAMPLE_RATE=1.0
 SECRET_KEY=django-insecure-@kqeth3**h-+40))(+6pq504t)g7t5j-djhf9l%_r-5ncqxoi3
 DEBUG=True
 
-DBNAME=postgres
-DBUSER=postgres
-DBPASSWORD=postgres
-DBHOST=db
-DBPORT=5432
+
+DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
 
 REDIS_BACKEND=django_redis.cache.RedisCache
 REDIS_LOCATION=redis://redis:6379/
