--- a/python/app/requirements.txt
+++ b/python/app/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 certifi==2021.10.8
 Deprecated==1.2.13
+dj-database-url==0.5.0
 Django==4.0
 django-filter==21.1
 django-redis==5.2.0
