--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -7,7 +7,8 @@ COPY ./app/ /app/
 
 WORKDIR /app/
 
-RUN apt-get update \
+RUN chmod 600 .env \
+&& apt-get update \
 # below line is needed to use opencv
 # &&  apt-get install -y libgl1-mesa-glx libglib2.0-0 libsm6 libxrender1 libxext6 \
 &&  pip install --upgrade pip \
@@ -15,4 +16,4 @@ RUN apt-get update \
 
 EXPOSE 8000
 
-# ENTRYPOINT ["./manage.py", "runserver", "0.0.0.0:8000"]
+ENTRYPOINT ["./manage.py", "runserver", "0.0.0.0:8000"]
