--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,29 +1,31 @@
 worker_processes auto;
 
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
 events {
     worker_connections  1024;
 }
 
 http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log          /var/log/nginx/access_app.log  main;
+    sendfile            on;
+    tcp_nopush          on;
+    default_type        application/octet-stream;
     server {
-        listen 80;
+        listen 80 default;
+        server_name _;
+        client_max_body_size 100M;
 
-        location /api/ {
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-
-            proxy_pass http://python_container:8000/;
+        location ~ ^/(api|admin)/ {
+            include uwsgi_params;
+            uwsgi_pass python_container:8000;
+            uwsgi_read_timeout 60s;
+            uwsgi_send_timeout 60s;
+            uwsgi_connect_timeout 60s;
         }
-
-        # location / {
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection "upgrade";
-        #     proxy_set_header Host $host;
-
-        #     proxy_pass http://frontend:3000/;
-        # }
     }
 }
