--- a/python/app/requirements.txt
+++ b/python/app/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url
 Django>= 4.0, <=5.0
 django-cors-headers
 django-filter
+django-login-required-middleware
 django-redis
 djangorestframework>= 3.0, <=4.0
 djangorestframework_simplejwt
@@ -18,4 +19,5 @@ redis
 sentry-sdk
 sqlparse
 urllib3
+uWSGI
 wrapt
