--- a/python/app/requirements.txt
+++ b/python/app/requirements.txt
@@ -10,6 +10,7 @@ django-redis
 djangorestframework>= 3.0, <4.0
 djangorestframework_simplejwt
 djoser
+flake8
 packaging
 psycopg2-binary
 pyparsing
