--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     redis:
-        image: "redis:6-alpine3.15"
+        image: redis:6-alpine3.15
         hostname: redis
         ports:
         - "6379:6379"
