--- a/front_js/Dockerfile
+++ b/front_js/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /usr/src/app/expense-tracker
 
 COPY ./expense-tracker/package.json .
 
-RUN yarn install
+RUN yarn install \
+&&  yarn install --save react-chartjs-2 chart.js
 
 COPY ./expense-tracker/ .
 
